# nfway

./: main.py  pyproject.toml
nfway/: cli.py  csv_writer.py  message_templates.py  nf_info.py  qrcode_reader.py  scrapper.py  telegram_bot.py
