[project]
name = "nfway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "geopy>=2.4.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "requests>=2.32.5",
]

[project.scripts]
nfway = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
